# semantic-topic-mapper

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: assignment_tasks.txt  sample_document.txt
docs/: PROJECT_STATUS.md  README.md  assumptions.md  cursor_context.md  disambiguation_logics.md  entity_extraction_pipeline.md  feature_plan_and_config.md  navigation_agent_design.md  run_guide.md  system_architecture.md
docs/arch/: README.md  ingestion.md  references_and_subclauses.md  topic_modeling.md  two_layer_architecture.md
docs/run/: README.md  cli.md  config_reference.md
output/: .gitkeep  ambiguity_report.csv  entity_catalogue.csv  entity_relationships.json  topic_map.json
output/llm_debug/: LLM_relationship_extraction_prompt.txt  LLM_relationship_extraction_response.json
src/semantic_topic_mapper/: __init__.py  __main__.py  config.py
src/semantic_topic_mapper/audit/: __init__.py  ambiguity_detector.py  consistency_checker.py  gap_analyzer.py  risk_scorer.py  unresolved_detector.py
src/semantic_topic_mapper/entities/: __init__.py  definition_linker.py  deterministic_entity_detector.py  entity_graph_builder.py  entity_models.py  entity_relationship_extractor.py  llm_entity_enricher.py
src/semantic_topic_mapper/graph/: __init__.py  entity_graph.py  reference_graph.py  topic_graph.py
src/semantic_topic_mapper/ingestion/: __init__.py  loader.py  pdf_to_txt.py  segmenter.py  text_normalizer.py
src/semantic_topic_mapper/llm/: __init__.py  client.py  schemas.py  validator.py
tests/: README.md  test_topic_models.py
(+27 files in other folders)
